Implement logic for Adding and Deleting projects

--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,11 @@ footer {
     align-items: center;
 }
 
+#project-element {
+    display: flex;
+    flex-direction: row;
+}
+
 #new-todo {
     display: flex;
     flex-direction: column;
