--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,10 @@ footer {
     align-items: center;
 }
 
+#new-project-modal {
+    display: none;
+}
+
 .project-element {
     display: flex;
     flex-direction: row;
