Add edit todo as a modal

--- a/src/styles.css
+++ b/src/styles.css
@@ -24,6 +24,10 @@ footer {
     display: none;
 }
 
+#edit-todo-modal {
+    display: none;
+}
+
 .project-element {
     display: flex;
     flex-direction: row;
