--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,10 @@ footer {
     align-items: center;
 }
 
+.project-list-element {
+    display: flex;
+}
+
 #new-project-modal {
     display: none;
 }
@@ -30,7 +34,8 @@ footer {
 
 .project-element {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .todo-overview {
