--- a/src/styles.css
+++ b/src/styles.css
@@ -1,19 +1,185 @@
+@import url('https://fonts.googleapis.com/css2?family=Pangolin&family=Roboto:wght@100;300;400;700;900&display=swap');
+
 * {
     box-sizing: border-box;
 }
 
+:root {
+    --primary-color: #dc4c3e;
+    --highlight-color: #f6efee;
+    --selected-color: #fee6e3;
+    --shade-color: #faf8f7;
+    --background-color: #ffffff;
+    --font-dark: #000000;
+    --font-medium: #444444;
+    --font-light: #e9e9e9;
+}
+
+body {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+}
+
+#content {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+header {
+    display: flex;
+    flex-direction: row;
+    padding: 24px;
+    background-color: var(--highlight-color);
+}
+
+header>#logo {
+    height: 40px;
+    margin-right: 5px;
+}
+
+header>#title {
+    font-size: 40px;
+    font-family: 'Pangolin', cursive;
+    color: var(--primary-color);
+}
+/* 
+header>#title::before {
+    content: url("./img/list.svg");
+} */
+
 main {
+    flex: auto;
     display: flex;
 }
+
+#selection-panel {
+    background-color: var(--shade-color);
+    color: var(--font-medium);
+    font-weight: 300;
+    padding: 16px;
+    width: 250px;
+}
+
+#static-selection {
+    margin-bottom: 16px;
+}
+
+#static-selection>div {
+    padding: 4px 8px;
+    border-radius: 4px;
+}
+
+#static-selection>div:before {
+    margin-right: 4px;
+    vertical-align: -40%;
+}
+
+#inbox::before {
+    content: url("./img/inbox.svg");
+}
+
+#today::before {
+    content: url("./img/clock.svg");
+}
+
+#this-week::before {
+    content: url("./img/calendar.svg");
+}
+
+#static-selection>div:hover, .project-list-element:hover {
+    background-color: var(--highlight-color);
+}
+
+#my-projects {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-weight: 400;
+    margin-bottom: 8px;
+}
+
+#new-project-button {
+    padding: 0 4px;
+    border-radius: 4px;
+    font-size: 24px;
+    font-weight: 100;
+    position: relative;
+    bottom: 2px;
+}
+
+#new-project-button:hover {
+    color: var(--font-dark);
+    background-color: var(--highlight-color);
+}
+
+#new-project-button:active {
+    color: var(--font-dark);
+    background-color: var(--selected-color);
+}
+
+.project-list-element {
+    display: flex;
+    padding: 4px;
+    height: 35px;
+    border-radius: 4px;
+    align-items: center;
+}
+
+.project-name {
+    margin-right: auto;
+}
+
+.edit-project-button::before {
+    content: url("./img/edit.svg");
+    margin-right: 6px;
+}
+
+.delete-project-button::before {
+    content: url("./img/trash.svg");
+}
+
+.edit-project-button::before, .delete-project-button::before {
+    filter: brightness(0) saturate(100%) invert(23%) sepia(0%) saturate(1644%) hue-rotate(169deg) brightness(97%) contrast(84%);
+}
+
+.edit-project-button:hover {
+    filter: brightness(0) saturate(100%) invert(0%) sepia(3%) saturate(7489%) hue-rotate(149deg) brightness(94%) contrast(103%);
+}
+
+.delete-project-button:hover {
+    filter: brightness(0) saturate(100%) invert(32%) sepia(89%) saturate(1783%) hue-rotate(342deg) brightness(95%) contrast(81%);
+}
+
+.edit-project-button, .delete-project-button {
+    display: none;
+}
+
+.project-list-element:hover .edit-project-button {
+    display: block;
+}
+
+.project-list-element:hover .delete-project-button {
+    display: block;
+}
+
+#static-selection>div:hover, #new-project-button:hover, .project-list-element:hover {
+    cursor: pointer;
+}
+
+#selection-panel .selected, #selection-panel .selected:hover {
+    color: var(--primary-color);
+    font-weight: 400;
+    background-color: var(--selected-color);
+}
+
 
 footer {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.project-list-element {
-    display: flex;
+    background-color: var(--highlight-color);
 }
 
 #new-project-modal {
@@ -21,6 +187,10 @@ footer {
 }
 
 #edit-project-modal {
+    display: none;
+}
+
+#delete-project-modal {
     display: none;
 }
 
@@ -82,7 +252,7 @@ footer {
     font-size: 14px;
     font-weight: 300;
     letter-spacing: 0;
-    color: rgb(0, 96, 169);
+    color: var(--font-medium);
     display: flex;
     align-items: center;
     margin: 10px 0;
